<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inputsheet.InputSheetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <!-- Checkboxes -->
        <CheckBox
            android:id="@+id/checkbox_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/input_checkbox_1" />
        <CheckBox
            android:id="@+id/checkbox_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_1"
            tools:text="@string/input_checkbox_2" />
        <CheckBox
            android:id="@+id/checkbox_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_2"
            tools:text="@string/input_checkbox_3" />
        <TextView
            android:id="@+id/checkbox_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_3"
            tools:text="@string/input_checkbox_summary_format_d" />
        <View
            android:id="@+id/checkbox_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black10NoTransparency"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp" />


        <!-- Radio Buttons -->
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_marginTop="24dp" >

            <RadioButton
                android:id="@+id/radio_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_radio_1" />

            <RadioButton
                android:id="@+id/radio_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_radio_2" />

            <RadioButton
                android:id="@+id/radio_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_radio_3" />
        </RadioGroup>
        <TextView
            android:id="@+id/radio_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radio_group"
            tools:text="@string/input_checkbox_summary_format_d" />
        <View
            android:id="@+id/radio_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black10NoTransparency"
            app:layout_constraintTop_toBottomOf="@+id/radio_summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp" />


        <!-- Toggles -->
        <ToggleButton
            android:id="@+id/toggle_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/radio_separator"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/input_toggle_1"
            tools:textOff="Off"
            tools:textOn="On"
            />
        <ToggleButton
            android:id="@+id/toggle_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/toggle_1"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/input_toggle_2"
            tools:textOff="Off"
            tools:textOn="On"
            />
        <ToggleButton
            android:id="@+id/toggle_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/toggle_2"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/input_toggle_3"
            tools:textOff="Off"
            tools:textOn="On"
            />
        <TextView
            android:id="@+id/toggle_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toggle_3"
            tools:text="@string/input_toggle_summary_format_d" />
        <View
            android:id="@+id/toggle_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black10NoTransparency"
            app:layout_constraintTop_toBottomOf="@+id/toggle_summary"
            android:layout_marginTop="12dp" />

        <!-- Switches -->
        <Switch
            android:id="@+id/switch_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toggle_separator"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            tools:text="@string/input_switch_1"
            tools:textOff="Off"
            tools:textOn="On"
            />
        <Switch
            android:id="@+id/switch_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/switch_1"
            app:layout_constraintStart_toStartOf="@+id/switch_1"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            tools:text="@string/input_switch_1"
            tools:textOff="Off"
            tools:textOn="On"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_3_which_is_actually_switchmaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/switch_2"
            app:layout_constraintStart_toStartOf="@+id/switch_1"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            tools:text="@string/input_switch_1"
            tools:textOff="Off"
            tools:textOn="On"
            />
        <TextView
            android:id="@+id/switch_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/switch_3_which_is_actually_switchmaterial"
            tools:text="@string/input_switch_summary_format_d" />
        <View
            android:id="@+id/switch_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black10NoTransparency"
            app:layout_constraintTop_toBottomOf="@+id/switch_summary"
            android:layout_marginTop="12dp" />


        <!-- ProgressBar -->
        <SeekBar
            android:id="@+id/seekbar_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/switch_separator"
            />
        <SeekBar
            android:id="@+id/seekbar_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/seekbar_1"
            />
        <SeekBar
            android:id="@+id/seekbar_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/seekbar_2"
            />
        <TextView
            android:id="@+id/seekbar_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/seekbar_3"
            tools:text="@string/input_seekbar_summary_format_s" />
        <View
            android:id="@+id/seekbar_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black10NoTransparency"
            app:layout_constraintTop_toBottomOf="@+id/seekbar_summary"
            android:layout_marginTop="12dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>